Added Banner Section

--- a/index.html
+++ b/index.html
@@ -5,8 +5,29 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>New Year Project</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;800&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
+
+    <!-- Headaer Area Start -->
+    <header class="header-area">
+        <div class="banner" style="background-image:url(images/banner/banner3.png)">
+            <div class="banner-text">
+                <h3 class="banner-title">All Thinks Are Possible If You believe</h3>
+                <p class="banner-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words</p>
+                <button class="btn-primary">Contact Us</button>
+            </div>
+        </div>
+    </header>
+    <!-- Headaer Area End -->
+
+    <!-- Main Area Start -->
+
+    <!-- Main Area End -->
+
+    <!-- Footer Area Start -->
+    <!-- Footer Area End -->
     
 </body>
 </html>
