Added Previous Year Section

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>New Year Project</title>
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;800&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/783d0440f0.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
@@ -22,9 +23,28 @@
     </header>
     <!-- Headaer Area End -->
 
-    <!-- Main Area Start -->
+    
+    <main> <!-- Main Area Start -->
 
-    <!-- Main Area End -->
+    <!-- Previous Year Section Start -->
+        <section class="previous-year">
+            <img src="images/person.png" alt="">
+            <div class="prev-text">
+                <h3 class="prev-title">My failures of previous year</h3>
+                <p class="prev-description">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock.</p>
+                <ul class="prev-list">
+                    <li><i class="fas fa-check"></i> Contrary to popular belief, is not simply.</li>
+                    <li><i class="fas fa-check"></i> Contrary to popular belief, is not simply.</li>
+                    <li><i class="fas fa-check"></i> Contrary to popular belief, is not simply.</li>
+                    <li><i class="fas fa-check"></i> Contrary to popular belief, is not simply.</li>
+                    <li><i class="fas fa-check"></i> Contrary to popular belief, is not simply.</li>
+                </ul>
+            </div>
+        </section>
+    <!-- Previous Year Section End -->
+
+    </main> <!-- Main Area End -->
+    
 
     <!-- Footer Area Start -->
     <!-- Footer Area End -->
