--- a/index.html
+++ b/index.html
@@ -43,6 +43,38 @@
         </section>
     <!-- Previous Year Section End -->
 
+    <!-- Plan Section Start -->
+    <section class="plan-area">
+        <h3 class="section-title">My Plans</h3>
+        <div class="plan-container">
+            <div class="plan">
+                <img src="images/icons/web.png" alt="">
+                <h4 class="plan-title">Web Development</h4>
+                <p class="plan-description">I want to start</p>
+                </img>
+            </div>
+            <div class="plan">
+                <img src="images/icons/js.png" alt="">
+                <h4 class="plan-title">Javascript</h4>
+                <p class="plan-description">I want to learn</p>
+                </img>
+            </div>
+            <div class="plan">
+                <img src="images/icons/smoke.png" alt="">
+                <h4 class="plan-title">Smoking Habit</h4>
+                <p class="plan-description">I want to end</p>
+                </img>
+            </div>
+            <div class="plan">
+                <img src="images/icons/ecom.png" alt="">
+                <h4 class="plan-title">Ecommerce</h4>
+                <p class="plan-description">I want to develop</p>
+                </img>
+            </div>
+        </div>
+    </section>
+    <!-- Plan Section End -->
+
     </main> <!-- Main Area End -->
     
 
